[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdl-extractors"
version = "0.0.1"
description = "Custom extractors for gallery-dl"
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["gallery-dl", "extractor"]
authors = [{ name = "bradenhilton" }]
classifiers = ["Private :: Do Not Upload"]
dependencies = ["gallery-dl<2"]

[tool.hatch.build.targets.wheel]
packages = ["extractor"]

[tool.hatch.envs.hatch-test]
default-args = []

[tool.hatch.envs.hatch-test.scripts]
run = "hatch run python ./test/test_results.py {args}"
run-cov = "hatch run python ./test/test_results.py {args}"
cov-combine = ""
cov-report = ""

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff.toml"

[tool.ruff]
extend = "ruff.toml"
