[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gdl-extractors"
version = "0.0.1"
description = "Custom extractors for gallery-dl"
requires-python = ">=3.9"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["gallery-dl", "extractor"]
authors = [{ name = "bradenhilton" }]
classifiers = ["Private :: Do Not Upload"]
dependencies = ["gallery-dl<2"]

[dependency-groups]
dev = ["ruff>=0.0.17"]

[tool.hatch.build.targets.wheel]
packages = ["extractor"]

[tool.ruff]
extend = "ruff.toml"
